# tibia_bot

./: .gitignore  CMakeLists.txt
src/: input_simulator.cpp  main.cpp  memory_reader..cpp  memory_reader.cpp  memory_reader.h  process_utils.cpp  process_utils.h  tempCodeRunnerFile.cpp  window_utils.cpp  window_utils.h
src/config/: settings.h
